[package]
name = "nif-xml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
quick-xml = { version = "0.31.0", features = ["serialize", "overlapped-lists"] }
serde = "1.0.197"

[dev-dependencies]
serde = { version = "1.0.197", features = ["derive"] }
