[package]
name = "nif"
version = "0.4.2"
edition = "2021"
authors = ["Romet Tagobert <sgzfxn@gmail.com>"]
categories = []
description = "A super-primitive Gamebryo NIF parser targeting version 20.0.0.4"
homepage = "https://github.com/amPerl/nif"
repository = "https://github.com/amPerl/nif"
license = "MIT"
readme = "README.md"
exclude = ["tests/*"]

[dependencies]
anyhow = "1.0.72"
thiserror = "1.0.43"
glam = "0.24.1"
binrw = "0.11.2"
